added ul lists and an image with an alt tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Why Lisa? Why!?</h1>
+    <img src="https://images-na.ssl-images-amazon.com/images/I/61BCJU36PkL._SY679_.jpg" alt="Image from the movie, 'The Room'">
     <h2>Today's Episode of Funky Ducks Feature</h2>
     <ul>
       <li>Ryan</li>
@@ -14,6 +15,11 @@
       <li>Chris</li>
       <li>Jessamyn</li>
       <li>Daniel</li>
+      <li>VP</li>
+      <p>and</p>
+      <li>Shahzad</li>
+      <li>Lisa</li>
     </ul>
+
   </body>
 </html>
